Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5378

[AMQP 1.0] zero capacity receiver does not reissue credit on reconnect

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.26
    • 0.27
    • C++ Client
    • None

    Description

      If you have a receiver with zero capacity blocked on a fetch when a reconnect is triggered, then on establishing a new connection the link is recreated correctly, but the credit required is not reissued.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: